save point - fixed queries